@@ -462,7 +462,6 @@
             <child>
               <widget class="GtkVBox" id="vbox2">
                 <property name="visible">True</property>
-                <property name="homogeneous">True</property>
                 <child>
                   <widget class="GtkHBox" id="hbox2">
                     <property name="visible">True</property>
@@ -487,28 +486,56 @@
                       </packing>
                     </child>
                     <child>
-                      <widget class="GtkHButtonBox" id="hbuttonbox1">
-                        <property name="visible">True</property>
-                        <property name="spacing">6</property>
-                        <property name="layout_style">GTK_BUTTONBOX_SPREAD</property>
-                        <child>
                           <widget class="GtkButton" id="refpoint_show">
+                            <property name="width_request">60</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
                             <property name="tooltip" translatable="yes">Show or hide the selected reference point. Write 'point*' into the box to select point1, point2, etc.</property>
-                            <property name="label" translatable="yes">show</property>
+                            <property name="label" translatable="yes">Show</property>
                             <property name="response_id">0</property>
                             <signal name="clicked" handler="on_refpoint_show_clicked"/>
                           </widget>
-                        </child>
-                      </widget>
+                          
                       <packing>
                         <property name="expand">False</property>
                         <property name="fill">False</property>
                         <property name="position">1</property>
                       </packing>
                     </child>
+                    
+                    <child>
+                      <widget class="GtkSeparatorToolItem" id="toolbutton_sep5">
+                        <property name="visible">True</property>
+                      </widget>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="homogeneous">False</property>
+                      </packing>
+                    </child>
+
+                    <child>
+                      <widget class="GtkEntry" id="help_entry">
+                        <property name="width_request">100</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="tooltip" translatable="yes">Write here a type you want to know about and press [ENTER]</property>
+                      </widget>
+                    </child>
+
+                    <child>
+                      <widget class="GtkButton" id="help_button">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">True</property>
+                        <property name="tooltip" translatable="yes">Show the help browser</property>
+                        <property name="label" translatable="yes">Help</property>
+                        <property name="response_id">0</property>
+                        <signal name="clicked" handler="on_help_button_clicked"/>
+                      </widget>
+                    </child>
+
+
                   </widget>
                   <packing>
                     <property name="expand">False</property>
